// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon render icon snapshots 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-stack inactive"
          cy-test="stack"
          data-testid="stack"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="icon-box inactive"
    >
      <div
        class="icon icon-stack inactive"
        cy-test="stack"
        data-testid="stack"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Icon render icon snapshots 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-stack inactive"
          cy-test="stack"
          data-testid="stack"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cutlery inactive"
          cy-test="cutlery"
          data-testid="cutlery"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="icon-box inactive"
    >
      <div
        class="icon icon-cutlery inactive"
        cy-test="cutlery"
        data-testid="cutlery"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Icon render icon snapshots 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-stack inactive"
          cy-test="stack"
          data-testid="stack"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cutlery inactive"
          cy-test="cutlery"
          data-testid="cutlery"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cake inactive"
          cy-test="cake"
          data-testid="cake"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="icon-box inactive"
    >
      <div
        class="icon icon-cake inactive"
        cy-test="cake"
        data-testid="cake"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Icon render icon snapshots 4`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-stack inactive"
          cy-test="stack"
          data-testid="stack"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cutlery inactive"
          cy-test="cutlery"
          data-testid="cutlery"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cake inactive"
          cy-test="cake"
          data-testid="cake"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-crown inactive"
          cy-test="crown"
          data-testid="crown"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="icon-box inactive"
    >
      <div
        class="icon icon-crown inactive"
        cy-test="crown"
        data-testid="crown"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Icon render icon snapshots 5`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-stack inactive"
          cy-test="stack"
          data-testid="stack"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cutlery inactive"
          cy-test="cutlery"
          data-testid="cutlery"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cake inactive"
          cy-test="cake"
          data-testid="cake"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-crown inactive"
          cy-test="crown"
          data-testid="crown"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-yacht inactive"
          cy-test="yacht"
          data-testid="yacht"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="icon-box inactive"
    >
      <div
        class="icon icon-yacht inactive"
        cy-test="yacht"
        data-testid="yacht"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Icon render icon snapshots 6`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-stack inactive"
          cy-test="stack"
          data-testid="stack"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cutlery inactive"
          cy-test="cutlery"
          data-testid="cutlery"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cake inactive"
          cy-test="cake"
          data-testid="cake"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-crown inactive"
          cy-test="crown"
          data-testid="crown"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-yacht inactive"
          cy-test="yacht"
          data-testid="yacht"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-snorkel inactive"
          cy-test="snorkel"
          data-testid="snorkel"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="icon-box inactive"
    >
      <div
        class="icon icon-snorkel inactive"
        cy-test="snorkel"
        data-testid="snorkel"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Icon render icon snapshots 7`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-stack inactive"
          cy-test="stack"
          data-testid="stack"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cutlery inactive"
          cy-test="cutlery"
          data-testid="cutlery"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cake inactive"
          cy-test="cake"
          data-testid="cake"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-crown inactive"
          cy-test="crown"
          data-testid="crown"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-yacht inactive"
          cy-test="yacht"
          data-testid="yacht"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-snorkel inactive"
          cy-test="snorkel"
          data-testid="snorkel"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-lightning inactive"
          cy-test="lightning"
          data-testid="lightning"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="icon-box inactive"
    >
      <div
        class="icon icon-lightning inactive"
        cy-test="lightning"
        data-testid="lightning"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Icon render icon snapshots 8`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-stack inactive"
          cy-test="stack"
          data-testid="stack"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cutlery inactive"
          cy-test="cutlery"
          data-testid="cutlery"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-cake inactive"
          cy-test="cake"
          data-testid="cake"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-crown inactive"
          cy-test="crown"
          data-testid="crown"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-yacht inactive"
          cy-test="yacht"
          data-testid="yacht"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-snorkel inactive"
          cy-test="snorkel"
          data-testid="snorkel"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-lightning inactive"
          cy-test="lightning"
          data-testid="lightning"
        />
      </div>
    </div>
    <div>
      <div
        class="icon-box inactive"
      >
        <div
          class="icon icon-skulll inactive"
          cy-test="skulll"
          data-testid="skulll"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="icon-box inactive"
    >
      <div
        class="icon icon-skulll inactive"
        cy-test="skulll"
        data-testid="skulll"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
